Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26567

After clicking "Do not show again" for QDS launch there's no easy way to get it back

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • Qt Creator 6.0.0-rc1
    • Quick Designer
    • None
    • QDS 2D - 2021 Week 45/46

    Description

      When user has clicked on the "Do not Show Again" button for launching QDS, the infobar is never shown again. This breaks the chain for launching the QDS from Creator.
      Even though warnings reset is under the settings, it's too hard to find for regular user. Better would be to not allow the user to suppress this message at least for Creator6.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              thohartm Thomas Hartmann
              kileppal Kimmo Leppälä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes