QmlProject: Do not allow to dismiss info bar for ui.qml files

If the info bar is dismissed ('Do Not Show Again') it will
never appear again. Since .ui.qml files are supposed to be opened in QDS
we do not want this to happen.

Task-number: QTCREATORBUG-26567
Change-Id: I236de493988c3634b56c0ac6b543f21f0bcfbec8
Reviewed-by: Kimmo Leppälä <kimmo.leppala@qt.io>
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>